
	* lib/qt3.cygclass:  export QTDIR.

	* bin/cygport.in (verbose, cygconf, cygmake, cyginstall):
	Preserve shell metacharacters in args.
	Patch by Eric Blake <http://cygwin.com/ml/cygwin/2006-12/msg00440.html>.

	* lib/ruby-gnome2.cygclass:
	Ruby-GNOME2 does not support parallel make.
	Fix modules which don't use a src subdir.
	Add support for modules outside of ruby-gnome2-all (e.g. gstreamer0.10).

	* lib/pygtk.cygclass:
	Add support for new bindings in gnome-python-desktop-2.16.

	* lib/fox.cygclass (fox_compile):
	Restore API reference doc generation.
	Accept doxygen.cfg as well as Doxyfile.

	* bin/*, lib/*:
	New function: defined(), behaves like the CPP macro.  Use throughout.
	Code cleanup.

	* CYGWIN-PATCHES/README, autogen.sh, configure.ac, doc/Makefile.am:
	Add HTML versions of man page with man2html.

	* data/mirrors (mirror_gnome):
	Remove download.gnome.org, as it just redirects to ftp.gnome.org.

	* Add CVS Id keywords.

	* lib/gstreamer.cygclass,
	  lib/gst-plugins0.8.cygclass,
	  lib/gst-plugins0.10.cygclass:
	Define GST_PLUGINDIR.
	Accept GST_PLUGINS_EXT for building separate external plugins together 
	    with base plugins.
	Separate possible, impossible (i.e. Linux-specific) and configure test
	    module options.

	* bin/cygport.in (pkg_binpkg):
	Accept PKG_LISTS variable to define .list names; defaults to PKG_NAMES.

	* bin/cygport.in (pkg_diff):
	Exclude mdate-sh from the .src.patch.

	* test/bootstrap, test/messages:
	Allow test execution when called by cygport.

	* CYGWIN-PATCHES/README, TODO, lib/Makefile.am (cygclass_DATA),
	  lib/cross.cygclass:
	New cygclass for creating and using cross-compilers.

	* lib/ruby.cygclass (RUBY_ARCH):
	Define as archdir, not arch.

	* CYGWIN-PATCHES/README, configure.ac:
	Post-release version bump.

*** 0.2.6 ***

	* data/mirrors [mirror_gnome]:  Add download.gnome.org.

	* bin/cygport.in (__list_deps):
	Fix dependency listing.
	Patch proposed by Eric Blake /ml/cygwin/2006-10/msg00852.html
