@@ -39,6 +39,7 @@ dist_privbin_SCRIPTS = \
 	prep_freedesktop_mime.sh \
 	prep_gconf_schemas.sh \
 	prep_gnu_info.sh \
+	prep_gtk_icon_theme.sh \
 	prep_gtk2_modules.sh \
 	prep_libtool_modules.sh \
 	prep_scrollkeeper_omf.sh
